
syntax = "proto3";

package chatpb;

option go_package = "leewiz.me/chatpb";

service ChatService {
    rpc SayHello(HelloRequest) returns (HelloReply);
    rpc SayHelloAgain(HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

// message ChatMessage {
//     string from = 1;
//     string msg = 2;
//     string time = 3;
// }

// protoc --go_out=. --go_opt=paths=source_relative \
//     --go-grpc_out=. --go-grpc_opt=paths=source_relative \
//     helloworld/helloworld.proto
